<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">OPTIC CINEMA</string>
    <string name="loading_error_title">An error occurred</string>
    <string name="loading_error_retry">Retry</string>
    <string name="loading_error_clear_cache">Clear Cache</string>
    <string name="loading_error_details">Error Details</string>
    <string name="update_title">New Update Available</string>
    <string name="update_message">A new version of the app is available!</string>
    <string name="update_current_version_label">Current version</string>
    <string name="update_new_version_label">New version</string>
    <string name="update_release_notes">Release notes</string>
    <string name="update_later">Maybe Later</string>
    <string name="update">Update</string>
    <string name="settings_update_check">Automatic update check</string>
    <string name="settings_update_check_summary">Check for new versions of the app automatically</string>
    <string name="app_layout">App layout</string>
    <string name="app_layout_auto">Auto</string>
    <string name="app_layout_mobile">Mobile layout</string>
    <string name="app_layout_tv">TV layout</string>
    <string name="app_layout_apply">Apply</string>
    <string name="providers_all_languages">All languages</string>
    <string name="providers_choose_title">Choose a provider</string>
    <string name="main_menu_change_provider">Change provider</string>
    <string name="main_menu_search">Search</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_movies">Movies</string>
    <string name="main_menu_tv_shows">TV Shows</string>
    <string name="main_menu_all_channels">All Channels</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_theme_change">Change Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_nero_amoled_oled">Nero Amoled/Oled</string>
    <string name="theme_sunset_cinema">Sunset Cinema</string>
    <string name="theme_steel_blue">Steel Blue</string>
    <string name="theme_forest_night">Forest Night</string>
    <string name="theme_crimson_noir">Crimson Noir</string>
    <string name="theme_midnight_violet">Midnight Violet</string>
    <string name="theme_nord_frost">Nord Frost</string>
    <string name="theme_emerald_luxe">Emerald Luxe</string>
    <string name="theme_retro_neon">Retro Neon</string>
    <string name="search_input_hint">Search movies, TV shows</string>
    <string name="global_search">Global search</string>
    <string name="searching">Searching...</string>
    <string name="search_error">Error</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="switching_to_provider">Switching to %s</string>
    <string name="home_swiper_watch_now">Watch Now</string>
    <string name="home_continue_watching">Continue Watching</string>
    <string name="home_favorite_movies">Favorite movies</string>
    <string name="home_favorite_tv_shows">Favorite TV shows</string>
    <string name="option_episode_open_tv_show">Go to TV show</string>
    <string name="option_show_favorite">Add to favorites</string>
    <string name="option_show_unfavorite">Remove from favorites</string>
    <string name="option_show_watched">Mark as watched</string>
    <string name="option_show_mark_all_previous_watched">Mark as watched until here</string>
    <string name="option_show_mark_all_previous_unwatched">Mark as unwatched until here</string>
    <string name="option_show_unwatched">Mark as unwatched</string>
    <string name="option_clear_program">Remove from Continue Watching</string>
    <string name="option_cancel">Cancel</string>
    <string name="episode_item_info">S%1$d E%2$d • %3$s</string>
    <string name="episode_item_info_episode_only">E%1$d • %2$s</string>
    <string name="tv_show_item_episode_number">E%d</string>
    <string name="tv_show_item_season_number_episode_number">S%1$d E%2$d</string>
    <string name="tv_show_item_type">TV</string>
    <string name="tv_show_runtime_hours_minutes">%1$d h %2$d min</string>
    <string name="tv_show_runtime_minutes">%d min</string>
    <string name="tv_show_watch_season_episode">Watch S%1$d E%2$d</string>
    <string name="tv_show_watch_episode">Watch E%d</string>
    <string name="tv_show_trailer">Trailer</string>
    <string name="tv_show_seasons">Seasons</string>
    <string name="tv_show_cast">Cast</string>
    <string name="tv_show_directors">Director</string>
    <string name="tv_show_you_may_also_like">You may also like</string>
    <string name="movie_item_type">Movie</string>
    <string name="movie_runtime_hours_minutes">%1$d h %2$d min</string>
    <string name="movie_runtime_minutes">%d min</string>
    <string name="movie_watch_now">Watch Now</string>
    <string name="movie_trailer">Trailer</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_directors">Director</string>
    <string name="movie_you_may_also_like">You may also like</string>
    <string name="season_number">Season %d</string>
    <string name="episode_number">Episode %d</string>
    <string name="people_birthday">Birthday</string>
    <string name="people_deathday">Day of death</string>
    <string name="people_birthplace">Place of birth</string>
    <string name="people_biography">Biography</string>
    <string name="people_read_more">Read More &gt;</string>
    <string name="people_known_for">Known for</string>
    <string name="people_place_of_birth">Place of birth</string>
    <string name="genre_header_name">%1$s Movies and TV Shows</string>
    <string name="genre_movies">%1$s Movies</string>
    <string name="genre_tv_shows">%1$s TV Shows</string>
    <string name="player_subtitle_tv_show">S%1$d E%2$d • %3$s</string>
    <string name="player_subtitle_tv_show_episode_only">E%1$d • %2$s</string>
    <string name="player_picture_in_picture_not_supported">PiP is not supported on your device</string>
    <string name="player_external_player_title">Play using</string>
    <string name="player_external_player_error_video">Video not load yet</string>
    <string name="player_not_available_it_message">Not available on Italian servers, search for it on TMDB in other languages</string>
    <string name="player_not_available_lang_message">Not available in %s, search for it on TMDB in other languages</string>
    <string name="player_retry_later_message">Video currently unavailable on this provider. Please try again later</string>
    <string name="player_next_episode_up_next">Up next</string>
    <string name="player_next_episode_action">Play now</string>
    <string name="player_next_episode_dismiss">Dismiss</string>
    <string name="player_next_episode_ready">Next episode ready</string>
    <string name="player_next_episode_autoplay_in">Playing next in %ds</string>
    <string name="player_aspect_ratio_fit">Fit to screen</string>
    <string name="player_aspect_ratio_fill">Stretch</string>
    <string name="player_aspect_ratio_zoom">Zoom</string>
    <string name="player_aspect_ratio_zoom_4_3">Zoom for 4:3</string>
    <string name="player_aspect_ratio_stretch_vertical">Stretch vertically</string>
    <string name="player_aspect_ratio_super_zoom">Super Zoom</string>
    <string name="player_settings_title">Settings</string>
    <string name="player_settings_quality_title">Quality for current video</string>
    <string name="player_settings_quality_label">Quality</string>
    <string name="player_settings_quality_sub_label_auto">Auto (%dp)</string>
    <string name="player_settings_quality_auto">Auto</string>
    <string name="player_settings_quality_auto_selected">Auto • %dp</string>
    <string name="player_settings_quality">%dp</string>
    <string name="player_settings_audio_title">Audio</string>
    <string name="player_settings_audio_label">Audio</string>
    <string name="player_settings_subtitles_title">Subtitles/closed captions</string>
    <string name="player_settings_subtitles_label">Captions</string>
    <string name="player_settings_subtitles_off">Off</string>
    <string name="player_settings_caption_style_title">Caption style</string>
    <string name="player_settings_caption_style_label">Caption style</string>
    <string name="player_settings_caption_style_sub_label">Change text color, background style and bottom margin</string>
    <string name="player_settings_caption_style_reset_style_label">Reset style</string>
    <string name="player_settings_caption_style_font_color_title">Font color</string>
    <string name="player_settings_caption_style_font_color_label">Font color</string>
    <string name="player_settings_caption_style_font_color_white">White</string>
    <string name="player_settings_caption_style_font_color_yellow">Yellow</string>
    <string name="player_settings_caption_style_font_color_green">Green</string>
    <string name="player_settings_caption_style_font_color_cyan">Cyan</string>
    <string name="player_settings_caption_style_font_color_blue">Blue</string>
    <string name="player_settings_caption_style_font_color_magenta">Magenta</string>
    <string name="player_settings_caption_style_font_color_red">Red</string>
    <string name="player_settings_caption_style_font_color_black">Black</string>
    <string name="player_settings_caption_style_text_size_title">Text size</string>
    <string name="player_settings_caption_style_text_size_label">Text size</string>
    <string name="player_settings_caption_style_text_size_0_5">50%</string>
    <string name="player_settings_caption_style_text_size_0_75">75%</string>
    <string name="player_settings_caption_style_text_size_0_8">80%</string>
    <string name="player_settings_caption_style_text_size_0_9">90%</string>
    <string name="player_settings_caption_style_text_size_1">100%</string>
    <string name="player_settings_caption_style_text_size_1_25">125%</string>
    <string name="player_settings_caption_style_text_size_1_5">150%</string>
    <string name="player_settings_caption_style_text_size_2">200%</string>
    <string name="player_settings_caption_style_text_size_3">300%</string>
    <string name="player_settings_caption_style_font_opacity_title">Font opacity</string>
    <string name="player_settings_caption_style_font_opacity_label">Font opacity</string>
    <string name="player_settings_caption_style_font_opacity_0_5">50%</string>
    <string name="player_settings_caption_style_font_opacity_0_75">75%</string>
    <string name="player_settings_caption_style_font_opacity_1">100%</string>
    <string name="player_settings_caption_style_edge_style_title">Character edge style</string>
    <string name="player_settings_caption_style_edge_style_label">Character edge style</string>
    <string name="player_settings_caption_style_edge_style_none">None</string>
    <string name="player_settings_caption_style_edge_style_raised">Raised</string>
    <string name="player_settings_caption_style_edge_style_depressed">Depressed</string>
    <string name="player_settings_caption_style_edge_style_outline">Uniform</string>
    <string name="player_settings_caption_style_edge_style_drop_shadow">Drop Shadow</string>
    <string name="player_settings_caption_style_background_color_title">Background color</string>
    <string name="settings_about">About</string>
    <string name="settings_telegram">Telegram group</string>
    <string name="settings_autoplay">Autoplay next episode</string>
    <string name="player_settings">Player settings</string>
    <string name="settings_player_gestures">Player gestures</string>
    <string name="miscelaneous_title">Miscellaneous</string>
    <string name="settings_immersive_mode">Immersive Mode</string>
    <string name="settings_immersive_mode_summary">Hide status and navigation bars</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_theme_title">App Theme</string>
</resources>