<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_category_appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="SELECTED_THEME"
            android:title="@string/settings_theme_title"
            android:summary="%s"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:defaultValue="default"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="APP_LANGUAGE"
            android:title="@string/settings_app_language"
            android:summary="%s"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="IMMERSIVE_MODE"
            android:title="@string/settings_immersive_mode"
            android:summary="@string/settings_immersive_mode_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/player_settings"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="AUTOPLAY"
            android:title="@string/settings_autoplay"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="PLAYER_GESTURES"
            android:title="@string/settings_player_gestures"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/miscelaneous_title"
        app:iconSpaceReserved="false">

        <Preference
            android:icon="@drawable/ic_telegram"
            android:key="p_settings_telegram"
            android:title="@string/settings_telegram"
            android:summary="\@Opt1c_gh0st"
            app:iconSpaceReserved="false" />

        <Preference
            android:icon="@drawable/ic_settings_about"
            android:key="p_settings_about"
            android:title="@string/settings_about"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
